add create_admin.py superuser

--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ SQL_USER=postgres
 SQL_PASSWORD=postgres
 SQL_HOST=db
 SQL_PORT=5432
+
+Admin_username = admin
+Admin_email = admin@admin.company
+Admin_password = admin
