--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     #python manage.py runserver_plus 0.0.0.0:8000 --cert-file cert.crt &&
     command: sh -c "python manage.py makemigrations &&
                     python manage.py migrate &&
+                    python manage.py shell < create_admin.py &&
                     python manage.py runserver 0.0.0.0:8000 &&
                     python manage.py collectstatic --noinput &&
                     python manage.py dumpdata > db_old.json &&
